Decouple POSIX verification from test runner

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,5 +33,9 @@ jobs:
             echo "bubblewrap unusable" >&2
             exit 1
           fi
+      - name: Install checkbashisms dependency
+        run: ./spells/menu/install/install-checkbashisms
+      - name: Verify POSIX compliance
+        run: ./spells/verify-posix
       - name: Run unit tests
-        run: ./spells/menu/system/test-wizardry --verbose
+        run: ./spells/menu/system/test-magic --verbose
