--- a/.github/workflows/posix.yml
+++ b/.github/workflows/posix.yml
@@ -2,7 +2,11 @@ name: POSIX Compliance
 
 on:
   push:
+    branches:
+      - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   posix:
