--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -136,4 +136,4 @@ jobs:
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system || true
       - name: Run unit tests in Nix shell
-        run: nix-shell -I nixpkgs=channel:nixos-unstable -p bubblewrap uidmap shadow --run "./spells/menu/system/test-magic --verbose"
+        run: nix-shell -I nixpkgs=channel:nixos-unstable -p bubblewrap shadow --run "./spells/menu/system/test-magic --verbose"
