--- a/.github/workflows/posix.yml
+++ b/.github/workflows/posix.yml
@@ -1,5 +1,9 @@
 name: POSIX Compliance
 
+concurrency:
+  group: posix-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches:
@@ -15,6 +19,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install checkbashisms dependency
-        run: ./spells/menu/install/install-checkbashisms
+        run: ./spells/install/install-checkbashisms
       - name: Verify POSIX compliance
-        run: ./spells/verify-posix
+        run: ./spells/system/verify-posix
