--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,9 @@
 name: Tests
 
+concurrency:
+  group: tests-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches:
@@ -40,7 +44,7 @@ jobs:
             echo "bubblewrap unusable; proceeding without sandboxing" >&2
           fi
       - name: Run unit tests
-        run: ./spells/menu/system/test-magic --verbose
+        run: ./spells/system/test-magic --verbose
 
   macos:
     name: Tests (macOS)
@@ -51,7 +55,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Run unit tests
-        run: ./spells/menu/system/test-magic --verbose
+        run: ./spells/system/test-magic --verbose
 
   debian:
     name: Tests (Debian)
@@ -85,7 +89,7 @@ jobs:
             echo "bubblewrap unusable; proceeding without sandboxing" >&2
           fi
       - name: Run unit tests
-        run: ./spells/menu/system/test-magic --verbose
+        run: ./spells/system/test-magic --verbose
 
   arch:
     name: Tests (Arch Linux)
@@ -119,7 +123,7 @@ jobs:
             echo "bubblewrap unusable; proceeding without sandboxing" >&2
           fi
       - name: Run unit tests
-        run: ./spells/menu/system/test-magic --verbose
+        run: ./spells/system/test-magic --verbose
 
   nix:
     name: Tests (Nix)
@@ -146,4 +150,4 @@ jobs:
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system || true
       - name: Run unit tests in Nix shell
-        run: nix-shell -I nixpkgs=channel:nixos-unstable -p bubblewrap shadow --run "./spells/menu/system/test-magic --verbose"
+        run: nix-shell -I nixpkgs=channel:nixos-unstable -p bubblewrap shadow --run "./spells/system/test-magic --verbose"
