--- a/.github/workflows/posix.yml
+++ b/.github/workflows/posix.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  pull_request:
+  pull_request_target:
     branches:
       - main
 
@@ -15,6 +15,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install checkbashisms dependency
-        run: ./spells/menu/install/install-checkbashisms
+        run: ./spells/install/install-checkbashisms
       - name: Verify POSIX compliance
-        run: ./spells/verify-posix
+        run: ./spells/system/verify-posix
