--- a/.github/workflows/demonstrate-wizardry.yml
+++ b/.github/workflows/demonstrate-wizardry.yml
@@ -1,12 +1,7 @@
 name: Demonstrate wizardry
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 # Cancel previous runs when new commits are pushed
 concurrency:
