--- a/.github/workflows/test-standalone-spells.yml
+++ b/.github/workflows/test-standalone-spells.yml
@@ -1,10 +1,7 @@
 name: Test standalone compiled spells
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_dispatch:
 
 # Cancel previous runs when new commits are pushed
 concurrency:
