Skip glosses in non-interactive shells

--- a/.github/workflows/139-2-arch-banish0.yml
+++ b/.github/workflows/139-2-arch-banish0.yml
@@ -19,6 +19,8 @@ jobs:
     container: archlinux:latest
     env:
       WIZARDRY_OS_LABEL: arch
+      USER: root
+      LOGNAME: root
     steps:
       - name: Install git and core utilities
         run: pacman -Sy --noconfirm git procps-ng coreutils sed gawk grep findutils attr file
