--- a/.github/workflows/139-7-ubuntu-banish0-gloss.yml
+++ b/.github/workflows/139-7-ubuntu-banish0-gloss.yml
@@ -36,7 +36,18 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run banish 0 with glosses
-        run: . spells/.imps/sys/invoke-wizardry && banish 0 --only --no-tests --no-heal
+      - name: Run banish 0 with glosses (capture segfault)
+        run: |
+          set +e
+          ulimit -c unlimited || true
+          . spells/.imps/sys/invoke-wizardry
+          banish 0 --only --no-tests --no-heal
+          status=$?
+          if [ "$status" -eq 139 ]; then
+            printf '%s\n' "banish exited with code 139 (SIGSEGV)"
+            printf '%s\n' "Last 50 dmesg lines (if available):"
+            dmesg | tail -n 50 || true
+          fi
+          exit "$status"
       - name: Run parse banish baseline
         run: . spells/.imps/sys/invoke-wizardry && parse banish
