--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,13 +69,8 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-1 Ubuntu banish 0 repro"
-            "139-2 Arch banish 0 repro"
-            "139-3 NixOS banish 0 repro"
-            "139-4 Ubuntu banish 0 no gloss repro"
-            "139-5 Arch banish 0 no gloss repro"
-            "139-6 NixOS banish 0 no gloss repro"
-            "139-7 Ubuntu banish 0 gloss repro"
+            "139-8 Ubuntu gloss regen repro"
+            "139-9 Ubuntu gloss load only repro"
           )
           
           # Total number of workflows we're monitoring
