--- a/.github/workflows/139-8-ubuntu-gloss-regen.yml
+++ b/.github/workflows/139-8-ubuntu-gloss-regen.yml
@@ -1,7 +1,9 @@
-name: 139-7 Ubuntu banish 0 gloss repro
+name: 139-8 Ubuntu gloss regen repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +13,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-banish0-gloss:
-    name: Ubuntu banish 0 gloss repro
+  ubuntu-gloss-regen:
+    name: Ubuntu gloss regen repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,11 +36,29 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run banish 0 with glosses (capture segfault)
+      - name: Remove gloss cache
+        run: |
+          cache_dir="${TMPDIR:-/tmp}"
+          cache_key=$(printf '%s' "$PWD" | cksum | cut -d' ' -f1)
+          cache_file="${cache_dir}/.wizardry-glosses-${cache_key}-$(id -u).sh"
+          printf '%s\n' "Removing gloss cache at ${cache_file}"
+          rm -f "$cache_file"
+      - name: Run banish 0 with gloss regen (capture segfault)
         run: |
           set +e
           ulimit -c unlimited || true
           . spells/.imps/sys/invoke-wizardry
+          cache_dir="${TMPDIR:-/tmp}"
+          cache_key=$(printf '%s' "$PWD" | cksum | cut -d' ' -f1)
+          cache_file="${cache_dir}/.wizardry-glosses-${cache_key}-$(id -u).sh"
+          if [ -f "$cache_file" ]; then
+            printf '%s\n' "Gloss cache checksum:"
+            cksum "$cache_file"
+            printf '%s\n' "Gloss cache preview:"
+            head -n 40 "$cache_file"
+          else
+            printf '%s\n' "Gloss cache not found after invoke-wizardry"
+          fi
           banish 0 --only --no-tests --no-heal
           status=$?
           if [ "$status" -eq 139 ]; then
@@ -47,5 +67,3 @@ jobs:
             dmesg | tail -n 50 || true
           fi
           exit "$status"
-      - name: Run parse banish baseline
-        run: . spells/.imps/sys/invoke-wizardry && parse banish
