--- a/.github/workflows/139-10-ubuntu-gloss-unset.yml
+++ b/.github/workflows/139-10-ubuntu-gloss-unset.yml
@@ -1,7 +1,9 @@
-name: 139-8 Ubuntu gloss regen repro
+name: 139-10 Ubuntu gloss unset repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +13,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-gloss-regen:
-    name: Ubuntu gloss regen repro
+  ubuntu-gloss-unset:
+    name: Ubuntu gloss unset repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,14 +36,7 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Remove gloss cache
-        run: |
-          cache_dir="${TMPDIR:-/tmp}"
-          cache_key=$(printf '%s' "$PWD" | cksum | cut -d' ' -f1)
-          cache_file="${cache_dir}/.wizardry-glosses-${cache_key}-$(id -u).sh"
-          printf '%s\n' "Removing gloss cache at ${cache_file}"
-          rm -f "$cache_file"
-      - name: Run banish 0 with gloss regen (capture segfault)
+      - name: Unset gloss functions before banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -50,18 +45,23 @@ jobs:
           cache_key=$(printf '%s' "$PWD" | cksum | cut -d' ' -f1)
           cache_file="${cache_dir}/.wizardry-glosses-${cache_key}-$(id -u).sh"
           if [ -f "$cache_file" ]; then
-            printf '%s\n' "Gloss cache checksum:"
-            cksum "$cache_file"
-            printf '%s\n' "Gloss cache preview:"
-            head -n 40 "$cache_file"
-          else
-            printf '%s\n' "Gloss cache not found after invoke-wizardry"
+            awk '/^[A-Za-z_][A-Za-z0-9_]*\(\) \{/{sub(/\(\) \{.*/,""); print}' "$cache_file" | \
+              while IFS= read -r gloss_fn; do
+                unset -f "$gloss_fn" 2>/dev/null || true
+              done
           fi
-          banish 0 --only --no-tests --no-heal
-          status=$?
+          if command -v timeout >/dev/null 2>&1; then
+            timeout 300 banish 0 --only --no-tests --no-heal
+            status=$?
+          else
+            banish 0 --only --no-tests --no-heal
+            status=$?
+          fi
           if [ "$status" -eq 139 ]; then
             printf '%s\n' "banish exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
+          elif [ "$status" -eq 124 ]; then
+            printf '%s\n' "banish timed out after 300 seconds"
           fi
           exit "$status"
