--- a/.github/workflows/139-13-ubuntu-banish-unset-gloss.yml
+++ b/.github/workflows/139-13-ubuntu-banish-unset-gloss.yml
@@ -1,7 +1,9 @@
-name: 139-11 Ubuntu manual gloss repro
+name: 139-13 Ubuntu banish gloss unset repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,12 +13,12 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-manual-gloss:
-    name: Ubuntu manual gloss repro
+  ubuntu-banish-unset-gloss:
+    name: Ubuntu banish gloss unset repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
-      WIZARDRY_GLOSSES: "0"
+      WIZARDRY_GLOSSES: "1"
       WIZARDRY_DEBUG: "1"
     steps:
       - name: Checkout
@@ -34,21 +36,12 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Manually generate and source glosses
+      - name: Unset banish gloss function before running banish
         run: |
           set +e
           ulimit -c unlimited || true
           . spells/.imps/sys/invoke-wizardry
-          gloss_file=$(mktemp "${TMPDIR:-/tmp}/wizardry-glosses.XXXXXX") || exit 1
-          if generate-glosses --quiet --output "$gloss_file"; then
-            printf '%s\n' "Manual gloss checksum:"
-            cksum "$gloss_file"
-            printf '%s\n' "Manual gloss preview:"
-            head -n 40 "$gloss_file"
-            . "$gloss_file"
-          else
-            printf '%s\n' "generate-glosses failed"
-          fi
+          unset -f banish 2>/dev/null || true
           if command -v timeout >/dev/null 2>&1; then
             timeout 300 banish 0 --only --no-tests --no-heal
             status=$?
@@ -56,7 +49,6 @@ jobs:
             banish 0 --only --no-tests --no-heal
             status=$?
           fi
-          rm -f "$gloss_file"
           if [ "$status" -eq 139 ]; then
             printf '%s\n' "banish exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
