--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,8 +69,8 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-10 Ubuntu gloss unset repro"
-            "139-11 Ubuntu manual gloss repro"
+            "139-12 Ubuntu banish direct repro"
+            "139-13 Ubuntu banish gloss unset repro"
           )
           
           # Total number of workflows we're monitoring
