--- a/.github/workflows/139-13-ubuntu-banish-unset-gloss.yml
+++ b/.github/workflows/139-13-ubuntu-banish-unset-gloss.yml
@@ -1,9 +1,7 @@
 name: 139-13 Ubuntu banish gloss unset repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
