--- a/.github/workflows/139-14-ubuntu-banish-level8-no-tests.yml
+++ b/.github/workflows/139-14-ubuntu-banish-level8-no-tests.yml
@@ -1,7 +1,9 @@
-name: 139-12 Ubuntu banish direct repro
+name: 139-14 Ubuntu banish level 8 no-tests repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +13,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-banish-direct:
-    name: Ubuntu banish direct repro
+  ubuntu-banish-level8-no-tests:
+    name: Ubuntu banish level 8 no-tests repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,16 +36,16 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run banish via command path (capture segfault)
+      - name: Run banish level 8 without tests (capture segfault)
         run: |
           set +e
           ulimit -c unlimited || true
           . spells/.imps/sys/invoke-wizardry
           if command -v timeout >/dev/null 2>&1; then
-            timeout 300 "$WIZARDRY_DIR/spells/wards/banish" 0 --only --no-tests --no-heal
+            timeout 300 banish 8 --only --no-tests --no-heal
             status=$?
           else
-            "$WIZARDRY_DIR/spells/wards/banish" 0 --only --no-tests --no-heal
+            banish 8 --only --no-tests --no-heal
             status=$?
           fi
           if [ "$status" -eq 139 ]; then
