--- a/.github/workflows/139-16-ubuntu-banish-level8-no-gloss.yml
+++ b/.github/workflows/139-16-ubuntu-banish-level8-no-gloss.yml
@@ -1,7 +1,9 @@
-name: 139-15 Ubuntu banish level 8 + test-magic repro
+name: 139-16 Ubuntu banish level 8 no-gloss repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,12 +13,12 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-banish-level8-test-magic:
-    name: Ubuntu banish level 8 + test-magic repro
+  ubuntu-banish-level8-no-gloss:
+    name: Ubuntu banish level 8 no-gloss repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
-      WIZARDRY_GLOSSES: "1"
+      WIZARDRY_GLOSSES: "0"
       WIZARDRY_DEBUG: "1"
     steps:
       - name: Checkout
@@ -34,32 +36,23 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run banish level 8 with test-magic (capture segfault)
+      - name: Run banish level 8 without glosses (capture segfault)
         run: |
           set +e
           ulimit -c unlimited || true
           . spells/.imps/sys/invoke-wizardry
           if command -v timeout >/dev/null 2>&1; then
-            timeout 300 banish 8
+            timeout 300 banish 8 --only --no-tests --no-heal
             status=$?
           else
-            banish 8
+            banish 8 --only --no-tests --no-heal
             status=$?
           fi
-          if [ "$status" -eq 0 ]; then
-            if command -v timeout >/dev/null 2>&1; then
-              timeout 300 ./spells/.wizardry/test-magic --verbose
-              status=$?
-            else
-              ./spells/.wizardry/test-magic --verbose
-              status=$?
-            fi
-          fi
           if [ "$status" -eq 139 ]; then
-            printf '%s\n' "test run exited with code 139 (SIGSEGV)"
+            printf '%s\n' "banish exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "test run timed out after 300 seconds"
+            printf '%s\n' "banish timed out after 300 seconds"
           fi
           exit "$status"
