--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,8 +69,8 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-14 Ubuntu banish level 8 no-tests repro"
-            "139-15 Ubuntu banish level 8 + test-magic repro"
+            "139-16 Ubuntu banish level 8 no-gloss repro"
+            "139-17 Ubuntu test-magic only repro"
           )
           
           # Total number of workflows we're monitoring
