Rotate exit-139 repros to loop-based hypotheses

--- a/.github/workflows/139-18-ubuntu-banish-level8-glosses-no-tests.yml
+++ b/.github/workflows/139-18-ubuntu-banish-level8-glosses-no-tests.yml
@@ -1,9 +1,7 @@
 name: 139-18 Ubuntu banish level 8 glosses no-tests repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
