--- a/.github/workflows/139-22-ubuntu-banish-level8-test-helpers-only.yml
+++ b/.github/workflows/139-22-ubuntu-banish-level8-test-helpers-only.yml
@@ -1,9 +1,7 @@
 name: 139-22 Ubuntu banish level 8 test-helpers-only repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
