--- a/.github/workflows/139-20-ubuntu-banish-level8-glosses-tests.yml
+++ b/.github/workflows/139-20-ubuntu-banish-level8-glosses-tests.yml
@@ -1,9 +1,7 @@
 name: 139-20 Ubuntu banish level 8 glosses tests repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
