--- a/.github/workflows/139-21-ubuntu-banish-level8-glosses-then-test.yml
+++ b/.github/workflows/139-21-ubuntu-banish-level8-glosses-then-test.yml
@@ -1,9 +1,7 @@
 name: 139-21 Ubuntu banish level 8 glosses then test-magic repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
