--- a/.github/workflows/139-24-ubuntu-test-magic-test-helpers-only.yml
+++ b/.github/workflows/139-24-ubuntu-test-magic-test-helpers-only.yml
@@ -1,9 +1,7 @@
 name: 139-24 Ubuntu test-magic test-helpers-only repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
