--- a/.github/workflows/139-31-ubuntu-banish0-loop-glosses.yml
+++ b/.github/workflows/139-31-ubuntu-banish0-loop-glosses.yml
@@ -1,7 +1,9 @@
-name: 139-26 Ubuntu parse banish level 8 repro
+name: 139-31 Ubuntu banish 0 loop glosses repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +13,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-parse-banish-level8:
-    name: Ubuntu parse banish level 8 repro
+  ubuntu-banish0-loop-glosses:
+    name: Ubuntu banish 0 loop glosses repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,23 +36,31 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run banish via parse command path
+      - name: Loop banish level 0 with glosses
         run: |
           set +e
           ulimit -c unlimited || true
           . spells/.imps/sys/invoke-wizardry
-          if command -v timeout >/dev/null 2>&1; then
-            timeout 300 parse banish 8 --only --no-tests --no-heal
-            status=$?
-          else
-            parse banish 8 --only --no-tests --no-heal
-            status=$?
-          fi
-          if [ "$status" -eq 139 ]; then
-            printf '%s\n' "parse banish exited with code 139 (SIGSEGV)"
-            printf '%s\n' "Last 50 dmesg lines (if available):"
-            dmesg | tail -n 50 || true
-          elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "parse banish timed out after 300 seconds"
-          fi
+          status=0
+          for i in $(seq 1 20); do
+            printf '%s\n' "banish iteration ${i}/20"
+            if command -v timeout >/dev/null 2>&1; then
+              timeout 120 banish 0 --only --no-tests --no-heal
+              status=$?
+            else
+              banish 0 --only --no-tests --no-heal
+              status=$?
+            fi
+            if [ "$status" -eq 139 ]; then
+              printf '%s\n' "banish exited with code 139 (SIGSEGV)"
+              printf '%s\n' "Last 50 dmesg lines (if available):"
+              dmesg | tail -n 50 || true
+              break
+            elif [ "$status" -eq 124 ]; then
+              printf '%s\n' "banish timed out after 120 seconds"
+              break
+            elif [ "$status" -ne 0 ]; then
+              printf '%s\n' "banish exited with code ${status}"
+            fi
+          done
           exit "$status"
