--- a/.github/workflows/139-33-ubuntu-generate-glosses-loop.yml
+++ b/.github/workflows/139-33-ubuntu-generate-glosses-loop.yml
@@ -1,7 +1,9 @@
-name: 139-26 Ubuntu parse banish level 8 repro
+name: 139-33 Ubuntu generate-glosses loop repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,12 +13,12 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-parse-banish-level8:
-    name: Ubuntu parse banish level 8 repro
+  ubuntu-generate-glosses-loop:
+    name: Ubuntu generate-glosses loop repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
-      WIZARDRY_GLOSSES: "1"
+      WIZARDRY_GLOSSES: "0"
       WIZARDRY_DEBUG: "1"
     steps:
       - name: Checkout
@@ -34,23 +36,28 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run banish via parse command path
+      - name: Loop generate-glosses and source output
         run: |
           set +e
           ulimit -c unlimited || true
           . spells/.imps/sys/invoke-wizardry
-          if command -v timeout >/dev/null 2>&1; then
-            timeout 300 parse banish 8 --only --no-tests --no-heal
-            status=$?
-          else
-            parse banish 8 --only --no-tests --no-heal
-            status=$?
-          fi
-          if [ "$status" -eq 139 ]; then
-            printf '%s\n' "parse banish exited with code 139 (SIGSEGV)"
-            printf '%s\n' "Last 50 dmesg lines (if available):"
-            dmesg | tail -n 50 || true
-          elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "parse banish timed out after 300 seconds"
-          fi
+          status=0
+          for i in $(seq 1 50); do
+            gloss_file=$(mktemp "${TMPDIR:-/tmp}/wizardry-glosses.XXXXXX") || exit 1
+            if generate-glosses --quiet --output "$gloss_file"; then
+              . "$gloss_file"
+              status=$?
+            else
+              status=$?
+            fi
+            rm -f "$gloss_file"
+            if [ "$status" -eq 139 ]; then
+              printf '%s\n' "generate-glosses exited with code 139 (SIGSEGV)"
+              printf '%s\n' "Last 50 dmesg lines (if available):"
+              dmesg | tail -n 50 || true
+              break
+            elif [ "$status" -ne 0 ]; then
+              printf '%s\n' "generate-glosses exited with code ${status}"
+            fi
+          done
           exit "$status"
