--- a/.github/workflows/139-35-ubuntu-banish8-regenerate-gloss-cache.yml
+++ b/.github/workflows/139-35-ubuntu-banish8-regenerate-gloss-cache.yml
@@ -1,7 +1,9 @@
-name: 139-25 Ubuntu banish level 8 no-gloss then test-magic repro
+name: 139-35 Ubuntu banish 8 regenerate gloss cache repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,12 +13,12 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-banish-level8-no-gloss-then-test:
-    name: Ubuntu banish level 8 no-gloss then test-magic repro
+  ubuntu-banish8-regenerate-gloss-cache:
+    name: Ubuntu banish 8 regenerate gloss cache repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
-      WIZARDRY_GLOSSES: "0"
+      WIZARDRY_GLOSSES: "1"
       WIZARDRY_DEBUG: "1"
     steps:
       - name: Checkout
@@ -34,32 +36,35 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run banish level 8 then test-magic without glosses
+      - name: Loop banish 8 with cache regeneration
         run: |
           set +e
           ulimit -c unlimited || true
           . spells/.imps/sys/invoke-wizardry
-          if command -v timeout >/dev/null 2>&1; then
-            timeout 300 banish 8 --only
-            status=$?
-          else
-            banish 8 --only
-            status=$?
-          fi
-          if [ "$status" -eq 0 ]; then
+          cache_dir="${TMPDIR:-/tmp}"
+          cache_key=$(printf '%s' "$WIZARDRY_DIR" | cksum | cut -d' ' -f1)
+          cache_file="${cache_dir}/.wizardry-glosses-${cache_key}-$(id -u).sh"
+          status=0
+          for i in $(seq 1 20); do
+            printf '%s\n' "cache regen iteration ${i}/20"
+            rm -f "$cache_file" "$cache_file.tmp" 2>/dev/null || true
             if command -v timeout >/dev/null 2>&1; then
-              timeout 300 ./spells/.wizardry/test-magic --verbose
+              timeout 120 banish 8 --only --no-tests --no-heal
               status=$?
             else
-              ./spells/.wizardry/test-magic --verbose
+              banish 8 --only --no-tests --no-heal
               status=$?
             fi
-          fi
-          if [ "$status" -eq 139 ]; then
-            printf '%s\n' "test run exited with code 139 (SIGSEGV)"
-            printf '%s\n' "Last 50 dmesg lines (if available):"
-            dmesg | tail -n 50 || true
-          elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "test run timed out after 300 seconds"
-          fi
+            if [ "$status" -eq 139 ]; then
+              printf '%s\n' "banish exited with code 139 (SIGSEGV)"
+              printf '%s\n' "Last 50 dmesg lines (if available):"
+              dmesg | tail -n 50 || true
+              break
+            elif [ "$status" -eq 124 ]; then
+              printf '%s\n' "banish timed out after 120 seconds"
+              break
+            elif [ "$status" -ne 0 ]; then
+              printf '%s\n' "banish exited with code ${status}"
+            fi
+          done
           exit "$status"
