--- a/.github/workflows/139-37-ubuntu-manual-gloss-loop.yml
+++ b/.github/workflows/139-37-ubuntu-manual-gloss-loop.yml
@@ -1,7 +1,9 @@
-name: 139-25 Ubuntu banish level 8 no-gloss then test-magic repro
+name: 139-37 Ubuntu manual gloss loop repro
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +13,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-banish-level8-no-gloss-then-test:
-    name: Ubuntu banish level 8 no-gloss then test-magic repro
+  ubuntu-manual-gloss-loop:
+    name: Ubuntu manual gloss loop repro
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,32 +36,36 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run banish level 8 then test-magic without glosses
+      - name: Loop manual gloss generation and banish
         run: |
           set +e
           ulimit -c unlimited || true
           . spells/.imps/sys/invoke-wizardry
-          if command -v timeout >/dev/null 2>&1; then
-            timeout 300 banish 8 --only
-            status=$?
-          else
-            banish 8 --only
-            status=$?
-          fi
-          if [ "$status" -eq 0 ]; then
+          status=0
+          for i in $(seq 1 20); do
+            printf '%s\n' "manual gloss iteration ${i}/20"
+            gloss_file=$(mktemp "${TMPDIR:-/tmp}/wizardry-glosses.XXXXXX") || exit 1
+            if generate-glosses --quiet --output "$gloss_file"; then
+              . "$gloss_file"
+            fi
             if command -v timeout >/dev/null 2>&1; then
-              timeout 300 ./spells/.wizardry/test-magic --verbose
+              timeout 120 banish 8 --only --no-tests --no-heal
               status=$?
             else
-              ./spells/.wizardry/test-magic --verbose
+              banish 8 --only --no-tests --no-heal
               status=$?
             fi
-          fi
-          if [ "$status" -eq 139 ]; then
-            printf '%s\n' "test run exited with code 139 (SIGSEGV)"
-            printf '%s\n' "Last 50 dmesg lines (if available):"
-            dmesg | tail -n 50 || true
-          elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "test run timed out after 300 seconds"
-          fi
+            rm -f "$gloss_file"
+            if [ "$status" -eq 139 ]; then
+              printf '%s\n' "banish exited with code 139 (SIGSEGV)"
+              printf '%s\n' "Last 50 dmesg lines (if available):"
+              dmesg | tail -n 50 || true
+              break
+            elif [ "$status" -eq 124 ]; then
+              printf '%s\n' "banish timed out after 120 seconds"
+              break
+            elif [ "$status" -ne 0 ]; then
+              printf '%s\n' "banish exited with code ${status}"
+            fi
+          done
           exit "$status"
