--- a/.github/workflows/139-29-ubuntu-banish8-loop-tests.yml
+++ b/.github/workflows/139-29-ubuntu-banish8-loop-tests.yml
@@ -1,9 +1,7 @@
 name: 139-29 Ubuntu banish 8 loop tests repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
