--- a/.github/workflows/139-30-ubuntu-banish8-test-magic-loop.yml
+++ b/.github/workflows/139-30-ubuntu-banish8-test-magic-loop.yml
@@ -1,9 +1,7 @@
 name: 139-30 Ubuntu banish 8 then test-magic loop repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
