--- a/.github/workflows/139-31-ubuntu-banish0-loop-glosses.yml
+++ b/.github/workflows/139-31-ubuntu-banish0-loop-glosses.yml
@@ -1,9 +1,7 @@
 name: 139-31 Ubuntu banish 0 loop glosses repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
