--- a/.github/workflows/139-32-ubuntu-parse-banish0-loop.yml
+++ b/.github/workflows/139-32-ubuntu-parse-banish0-loop.yml
@@ -1,9 +1,7 @@
 name: 139-32 Ubuntu parse banish 0 loop repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
