--- a/.github/workflows/139-37-ubuntu-manual-gloss-loop.yml
+++ b/.github/workflows/139-37-ubuntu-manual-gloss-loop.yml
@@ -1,9 +1,7 @@
 name: 139-37 Ubuntu manual gloss loop repro
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
