--- a/.github/workflows/139-52-ubuntu-hypothesis.yml
+++ b/.github/workflows/139-52-ubuntu-hypothesis.yml
@@ -1,7 +1,9 @@
-name: 139-36 Ubuntu test-magic loop repro
+name: 139-52 Ubuntu disable generate-glosses command check
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,8 +13,8 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-test-magic-loop:
-    name: Ubuntu test-magic loop repro
+  ubuntu-hypothesis-52:
+    name: 139-52 Ubuntu disable generate-glosses command check
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
@@ -34,29 +36,34 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Loop test-magic
+      - name: Patch wizardry scripts for hypothesis
+        run: |
+          python - <<'PY'
+from pathlib import Path
+path = Path('spells/.imps/sys/invoke-wizardry')
+text = path.read_text()
+text = text.replace('if command -v generate-glosses >/dev/null 2>&1; then', 'if false; then # disable generate-glosses')
+path.write_text(text)
+PY
+      - name: Run subshell banish repro
         run: |
           set +e
           ulimit -c unlimited || true
-          . spells/.imps/sys/invoke-wizardry
-          status=0
-          for i in $(seq 1 3); do
-            printf '%s\n' "test-magic iteration ${i}/3"
-            if command -v timeout >/dev/null 2>&1; then
-              timeout 300 ./spells/.wizardry/test-magic --verbose
-              status=$?
-            else
-              ./spells/.wizardry/test-magic --verbose
-              status=$?
-            fi
-            if [ "$status" -eq 139 ]; then
-              printf '%s\n' "test-magic exited with code 139 (SIGSEGV)"
-              printf '%s\n' "Last 50 dmesg lines (if available):"
-              dmesg | tail -n 50 || true
-              break
-            elif [ "$status" -eq 124 ]; then
-              printf '%s\n' "test-magic timed out after 300 seconds"
-              break
-            fi
-          done
+          if command -v timeout >/dev/null 2>&1; then
+            timeout 120 bash -lc '. spells/.imps/sys/invoke-wizardry && banish 8 --only --no-tests --no-heal'
+            status=$?
+          else
+            bash -lc '. spells/.imps/sys/invoke-wizardry && banish 8 --only --no-tests --no-heal'
+            status=$?
+          fi
+          if [ "$status" -eq 139 ]; then
+            printf '%s
+' "subshell banish exited with code 139 (SIGSEGV)"
+            printf '%s
+' "Last 50 dmesg lines (if available):"
+            dmesg | tail -n 50 || true
+          elif [ "$status" -eq 124 ]; then
+            printf '%s
+' "subshell banish timed out after 120 seconds"
+          fi
           exit "$status"
