--- a/.github/workflows/139-43-ubuntu-hypothesis.yml
+++ b/.github/workflows/139-43-ubuntu-hypothesis.yml
@@ -39,18 +39,18 @@ jobs:
       - name: Patch wizardry scripts for hypothesis
         run: |
           python - <<'PY'
-from pathlib import Path
-path = Path('spells/.imps/sys/invoke-wizardry')
-text = path.read_text()
-lines = []
-inserted = False
-for line in text.splitlines():
-    lines.append(line)
-    if (not inserted) and line.strip().startswith('_iw_gloss_persistent='):
-        lines.append('_iw_gloss_persistent=""')
-        inserted = True
-path.write_text('\n'.join(lines) + '\n')
-PY
+          from pathlib import Path
+          path = Path('spells/.imps/sys/invoke-wizardry')
+          text = path.read_text()
+          lines = []
+          inserted = False
+          for line in text.splitlines():
+              lines.append(line)
+              if (not inserted) and line.strip().startswith('_iw_gloss_persistent='):
+                  lines.append('_iw_gloss_persistent=""')
+                  inserted = True
+          path.write_text('\n'.join(lines) + '\n')
+          PY
       - name: Run subshell banish repro
         run: |
           set +e
@@ -63,13 +63,10 @@ PY
             status=$?
           fi
           if [ "$status" -eq 139 ]; then
-            printf '%s
-' "subshell banish exited with code 139 (SIGSEGV)"
-            printf '%s
-' "Last 50 dmesg lines (if available):"
+            printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
+            printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           elif [ "$status" -eq 124 ]; then
-            printf '%s
-' "subshell banish timed out after 120 seconds"
+            printf '%s\n' "subshell banish timed out after 120 seconds"
           fi
           exit "$status"
