--- a/.github/workflows/139-42-ubuntu-hypothesis.yml
+++ b/.github/workflows/139-42-ubuntu-hypothesis.yml
@@ -1,9 +1,7 @@
 name: 139-42 Ubuntu disable uncached gloss eval
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
