--- a/.github/workflows/139-61-ubuntu-glosses-off-env.yml
+++ b/.github/workflows/139-61-ubuntu-glosses-off-env.yml
@@ -1,9 +1,7 @@
 name: 139-61 Ubuntu glosses off via env
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
