--- a/.github/workflows/139-62-ubuntu-manual-gloss-eval.yml
+++ b/.github/workflows/139-62-ubuntu-manual-gloss-eval.yml
@@ -1,9 +1,7 @@
 name: 139-62 Ubuntu manual gloss eval
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
