--- a/.github/workflows/139-63-ubuntu-tmpdir-gloss.yml
+++ b/.github/workflows/139-63-ubuntu-tmpdir-gloss.yml
@@ -1,9 +1,7 @@
 name: 139-63 Ubuntu glosses with runner temp
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
