--- a/.github/workflows/139-64-ubuntu-glosses-source-only.yml
+++ b/.github/workflows/139-64-ubuntu-glosses-source-only.yml
@@ -1,7 +1,9 @@
-name: 139-47 Ubuntu disable parse synonyms fallback
+name: 139-64 Ubuntu glosses source only
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,12 +13,12 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-hypothesis-47:
-    name: 139-47 Ubuntu disable parse synonyms fallback
+  ubuntu-glosses-source-only:
+    name: 139-64 Ubuntu glosses source only
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
-      WIZARDRY_GLOSSES: "1"
+      WIZARDRY_GLOSSES: "0"
       WIZARDRY_DEBUG: "1"
     steps:
       - name: Checkout
@@ -34,31 +36,38 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Patch wizardry scripts for hypothesis
-        run: |
-          python - <<'PY'
-          from pathlib import Path
-          path = Path('spells/.imps/lex/parse')
-          text = path.read_text()
-          text = text.replace('if [ -n "$_synonym_target" ]; then', 'if false; then # disable synonyms')
-          path.write_text(text)
-          PY
-      - name: Run subshell banish repro
+      - name: Source glosses without banish
         run: |
           set +e
           ulimit -c unlimited || true
           if command -v timeout >/dev/null 2>&1; then
-            timeout 120 bash -lc '. spells/.imps/sys/invoke-wizardry && banish 8 --only --no-tests --no-heal'
+            timeout 120 bash -lc '
+              . spells/.imps/sys/invoke-wizardry
+              gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
+              generate-glosses >"$gloss_file"
+              printf "%s\n" "[gloss-test] before source"
+              . "$gloss_file"
+              printf "%s\n" "[gloss-test] after source"
+              rm -f "$gloss_file"
+            '
             status=$?
           else
-            bash -lc '. spells/.imps/sys/invoke-wizardry && banish 8 --only --no-tests --no-heal'
+            bash -lc '
+              . spells/.imps/sys/invoke-wizardry
+              gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
+              generate-glosses >"$gloss_file"
+              printf "%s\n" "[gloss-test] before source"
+              . "$gloss_file"
+              printf "%s\n" "[gloss-test] after source"
+              rm -f "$gloss_file"
+            '
             status=$?
           fi
           if [ "$status" -eq 139 ]; then
-            printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
+            printf '%s\n' "subshell gloss source exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "subshell banish timed out after 120 seconds"
+            printf '%s\n' "subshell gloss source timed out after 120 seconds"
           fi
           exit "$status"
