--- a/.github/workflows/139-66-ubuntu-glosses-tail.yml
+++ b/.github/workflows/139-66-ubuntu-glosses-tail.yml
@@ -1,7 +1,9 @@
-name: 139-47 Ubuntu disable parse synonyms fallback
+name: 139-66 Ubuntu glosses tail slice
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,12 +13,12 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-hypothesis-47:
-    name: 139-47 Ubuntu disable parse synonyms fallback
+  ubuntu-glosses-tail:
+    name: 139-66 Ubuntu glosses tail slice
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
-      WIZARDRY_GLOSSES: "1"
+      WIZARDRY_GLOSSES: "0"
       WIZARDRY_DEBUG: "1"
     steps:
       - name: Checkout
@@ -34,24 +36,29 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Patch wizardry scripts for hypothesis
-        run: |
-          python - <<'PY'
-          from pathlib import Path
-          path = Path('spells/.imps/lex/parse')
-          text = path.read_text()
-          text = text.replace('if [ -n "$_synonym_target" ]; then', 'if false; then # disable synonyms')
-          path.write_text(text)
-          PY
-      - name: Run subshell banish repro
+      - name: Run subshell banish repro with gloss tail slice
         run: |
           set +e
           ulimit -c unlimited || true
           if command -v timeout >/dev/null 2>&1; then
-            timeout 120 bash -lc '. spells/.imps/sys/invoke-wizardry && banish 8 --only --no-tests --no-heal'
+            timeout 120 bash -lc '
+              . spells/.imps/sys/invoke-wizardry
+              gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
+              generate-glosses | tail -n 2000 >"$gloss_file"
+              . "$gloss_file"
+              rm -f "$gloss_file"
+              banish 8 --only --no-tests --no-heal
+            '
             status=$?
           else
-            bash -lc '. spells/.imps/sys/invoke-wizardry && banish 8 --only --no-tests --no-heal'
+            bash -lc '
+              . spells/.imps/sys/invoke-wizardry
+              gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
+              generate-glosses | tail -n 2000 >"$gloss_file"
+              . "$gloss_file"
+              rm -f "$gloss_file"
+              banish 8 --only --no-tests --no-heal
+            '
             status=$?
           fi
           if [ "$status" -eq 139 ]; then
